--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build"
-        
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "svg-pan-zoom": "^3.6.1"
     }
-    
 }
